REMS-Salesforce/force-app/main/default/objects/Patient_Documentation__c/Patient_Documentation__c.object-meta.xml
<CustomObject>
    <label>Patient Documentation</label>
    <nameField>
        <label>Patient Documentation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>