REMS-Salesforce/force-app/main/default/objects/Patient_Documentation__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consent Form</fullName>
            </value>
            <value>
                <fullName>Lab Report</fullName>
            </value>
            <value>
                <fullName>Id Proof</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>