REMS-Salesforce/force-app/main/default/objects/Patient_Documentation__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Patient Documents</relationshipLabel>
    <relationshipName>Patient_Documents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>